--- a/package.json
+++ b/package.json
@@ -3,11 +3,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.3",
+    "bcryptjs": "^2.4.3",
+    "express-jwt": "^6.1.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "latest",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.19.5",
+    "rxjs": "^7.4.0",
+    "watchman": "^1.0.0",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "webpack": "^5.64.1",
+    "webpack-cli": "^4.9.1",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.0"
   }
 }
